--- a/public/style.css
+++ b/public/style.css
@@ -121,7 +121,7 @@ body{
 /**************ADD FORM ***************/
 .answer-add {
     padding: 20px;
-    background: #46be8a;
+    background: #99ff99;
 }
 
 .answer-add input {
