--- a/public/style.css
+++ b/public/style.css
@@ -54,7 +54,8 @@ body{
 
 .chat .avatar img {
     display: block;
-    border-radius: 15px;
+    border-top-right-radius: 15px;
+    border-bottom-left-radius: 15px;
     height: 100%;
 }
 
